--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "@popmotion/popcorn": "^0.4.4",
+    "framer-motion": "^11.0.5",
+    "html-react-parser": "^5.1.7",
+    "lodash": "^4.17.21",
+    "next": "14.1.0",
+    "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-lorem-ipsum": "^1.4.10",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
