--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "@popmotion/popcorn": "^0.4.4",
+    "@react-spring/parallax": "^9.7.3",
     "framer-motion": "^11.0.5",
     "html-react-parser": "^5.1.7",
     "lodash": "^4.17.21",
