--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
