--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
-    "@popmotion/popcorn": "^0.4.4",
+    "@popmotion/popcorn": "^0.4.2",
     "@react-spring/parallax": "^9.7.3",
     "framer-motion": "^11.0.5",
     "html-react-parser": "^5.1.7",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.15",
     "next": "14.1.0",
-    "popmotion": "^11.0.5",
+    "popmotion": "^9.0.0-beta-8",
     "react": "^18",
     "react-dom": "^18",
     "react-lorem-ipsum": "^1.4.10",
